# Music_box2

./: CMakeLists.txt  README.md  test_music_data2.json  updated_music_data.json
doc/: UML.txt
include/: Music_library.hpp  UML_alt.txt  music_library.hpp
src/: main.cpp  main2.cpp  main2.txt  music_data.json  music_library.cpp  music_library.hpp  music_library_prototyp.cpp
test/: test_main.cpp  test_music_data.json
trash/: main.cpp  main.txt  main3.cpp  main4.cpp
